added application config

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,7 +6,7 @@ logging:
     root: INFO
     no:
       lagalt:
-        rest-api: DEBUG
+        lagaltbackend: DEBUG
     org:
       springframework:
         boot:
