--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,6 @@ spring:
     allow-bean-definition-overriding: true # If you want to allow overriding of beans
   sql:
     init:
-      mode: never
+      mode: always
 
 
