--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -16,7 +16,7 @@ spring:
     url: jdbc:postgresql://127.0.0.1:5432/lagalt_db
   jpa:
     hibernate:
-      ddl-auto: update # NEVER CHANGE TO CREATE_DROP OR CREATE IN PRODUCTION. update can add, but never remove tables and columns
+      ddl-auto: update
       properties:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
