commented out dev and local

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,25 +1,25 @@
-server:
-  port: 8080
-
-logging:
-  level:
-    root: INFO
-    no:
-      lagalt:
-        lagaltbackend: DEBUG
-    org:
-      springframework:
-        boot:
-          autoconfigure: INFO
-spring:
-  datasource:
-    url: jdbc:postgresql://127.0.0.1:5432/lagalt_db
-  jpa:
-    hibernate:
-      ddl-auto: update
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.PostgreSQLDialect
+#server:
+#  port: 8080
+#
+#logging:
+#  level:
+#    root: INFO
+#    no:
+#      lagalt:
+#        lagaltbackend: DEBUG
+#    org:
+#      springframework:
+#        boot:
+#          autoconfigure: INFO
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://127.0.0.1:5432/lagalt_db
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#      properties:
+#        hibernate:
+#          dialect: org.hibernate.dialect.PostgreSQLDialect
 #  datasource:
 #    tomcat:
 #      max-wait: 20000
