--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create # change to "create" to drop and create tables, change to "update" to update schema
+      ddl-auto: update # change to "create" to drop and create tables, change to "update" to update schema
     properties:
       hibernate:
         show_sql: true
@@ -18,6 +18,6 @@ spring:
     allow-bean-definition-overriding: true
   sql:
     init:
-      mode: always # change to "always" to execute SQL scripts on every startup
+      mode: never # change to "always" to execute SQL scripts on every startup
 
 
