implemented spring security with spring version 2.6.7

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,5 @@ spring:
   sql:
     init:
       mode: never # change to "always" to execute SQL scripts on every startup
-
-
+jwt:
+  secret: 092345i6wetrp09wpOOPUl
