--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083/auth/realms/lagalt-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8083/auth/realms/lagalt-realm/protocol/openid-connect/certs
+
+spring.datasource.url=${env.DATABASE_URL}
+spring.datasource.username=${env.DATABASE_USER}
+spring.datasource.password=${env.DATABASE_PASS}
+server.port=${PORT:8080}
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.stat=DEBUG
+spring.sql.init.mode=always
+spring.jpa.defer-data-source-initialization=true
